# baxter-face-tracking

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml~
ros_ws/: baxter.sh  baxter.sh~  frames.gv  person_test_1  setup.sh
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AssemblyStates.h  CameraControl.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalOutputCommand.h  EndEffectorState.h  EndpointStates.h  HeadPanCommand.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h
ros_ws/devel/include/baxter_maintenance_msgs/: CalibrateArmEnable.h  TareData.h  UpdateSources.h
ros_ws/devel/include/birl_sim_examples/: Add_Gazebo_Model.h  Add_Gazebo_ModelRequest.h  Add_Gazebo_ModelResponse.h  Go_To_Position.h  Go_To_PositionRequest.h  Go_To_PositionResponse.h  Go_To_Start_Position.h  Go_To_Start_PositionRequest.h  Go_To_Start_PositionResponse.h  Gripper_Move.h  Gripper_MoveRequest.h  Gripper_MoveResponse.h
ros_ws/devel/include/cob_people_detection/: addDataActionFeedback.h  addDataGoal.h  captureImageResponse.h  deleteDataActionFeedback.h  deleteDataActionGoal.h  deleteDataResult.h  (+15 more)
ros_ws/install/: .rosinstall  setup.sh
ros_ws/src/: .rosinstall  .rosinstall.bak
ros_ws/src/baxter_faces/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
scripts/: draft.py  move.py  receive.py  recognition.py  recogwoweb.py  send.py  sendEmailSrv.py  test.py  tweet.py
(+1051 files in other folders)
